[gd_scene load_steps=4 format=3 uid="uid://bgl5onmll7k6n"]

[ext_resource type="Script" uid="uid://bi0qn1bsegxw8" path="res://Scenes/PauseMenus/Settings.gd" id="1_nmx2r"]
[ext_resource type="StyleBox" uid="uid://7vq53fl7s68b" path="res://Art/money_ui.tres" id="2_ohbyt"]
[ext_resource type="StyleBox" uid="uid://b6tap54l8tmfx" path="res://Art/money_ui_pressed.tres" id="3_uu43o"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nmx2r")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_focus_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_pressed_color = Color(0.403922, 0.192157, 0, 1)
theme_override_styles/hover = ExtResource("2_ohbyt")
theme_override_styles/pressed = ExtResource("3_uu43o")
theme_override_styles/normal = ExtResource("2_ohbyt")
text = "Tagasi"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_focus_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_pressed_color = Color(0.403922, 0.192157, 0, 1)
theme_override_styles/hover = ExtResource("2_ohbyt")
theme_override_styles/pressed = ExtResource("3_uu43o")
theme_override_styles/normal = ExtResource("2_ohbyt")
text = "Seaded
"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_focus_color = Color(0.403922, 0.192157, 0, 1)
theme_override_colors/font_pressed_color = Color(0.403922, 0.192157, 0, 1)
theme_override_styles/hover = ExtResource("2_ohbyt")
theme_override_styles/pressed = ExtResource("3_uu43o")
theme_override_styles/normal = ExtResource("2_ohbyt")
text = "Lõpeta Mäng"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_heli_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
